# c-toxcore

./: .cirrus.yml  .clang-format  .clang-tidy  .travis.yml  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  tox.h  toxav.h  toxencryptsave.h
.circleci/: cmake-tsan  config.yml
.github/scripts/: cmake-osx
.github/workflows/: ci.yml  codeql.yml  coverity-scan.yml  deploy.yml  post-submit.yml  sonar-scan.yml
auto_tests/: BUILD.bazel  CMakeLists.txt  Makefile.inc  TCP_test.c  announce_test.c  auto_test_support.c  auto_test_support.h  check_compat.h  conference_av_test.c  conference_test.c  crypto_test.c  dht_test.c  encryptsave_test.c  file_saving_test.c  forwarding_test.c  group_message_test.c  group_save_test.c  group_sync_test.c  group_topic_test.c  groupchat_test.c  lan_discovery_test.c  monolith_test.cpp  network_test.c  onion_test.c  proxy_test.c  reconnect_test.c  save_compatibility_test.c  save_friend_test.c  save_load_test.c  tox_dispatch_test.c  tox_events_test.c  tox_loop_test.c  tox_many_tcp_test.c  tox_many_test.c  tox_new_test.c  tox_test.c  toxav_basic_test.c  toxav_many_test.c
auto_tests/scenarios/: BUILD.bazel  CMakeLists.txt  scenario_group_by_id_test.c  scenario_overflow_recvq_test.c  scenario_toxav_basic_test.c  scenario_toxav_many_test.c  scenario_toxav_peer_offline_test.c
auto_tests/scenarios/framework/: README.md  framework.c
cmake/: Dependencies.cmake  ModulePackage.cmake  StrictAbi.cmake
other/: BUILD.bazel  DHT_bootstrap.c  bootstrap_node_packets.c  bootstrap_node_packets.h
other/analysis/: gen-file.sh  run-clang-tidy  run-cppcheck  run-infer  variants.sh
other/apidsl/: tox.in.h
other/astyle/: format-source
other/bootstrap_daemon/: BUILD.bazel
other/bootstrap_daemon/docker/: Dockerfile  tox-bootstrapd.sha256
other/bootstrap_daemon/src/: config.c  log.h  log_backend_stdout.h  log_backend_syslog.h  tox-bootstrapd.c
other/docker/autotools/: autotools.Dockerfile.dockerignore
other/docker/c2v/: Dockerfile  c2v.toml  run
other/docker/cake/: cake.Dockerfile  cake.Dockerfile.dockerignore  creduce.sh  dockerignore
other/docker/cbmc/: Dockerfile  crash.sh  run
other/docker/chibicc/: Makefile  broken.i  chibicc.Dockerfile  creduce.sh  run
other/docker/clang-format/: Dockerfile  run
other/docker/compcert/: Makefile  compcert.Dockerfile  libc.c
other/docker/coverage/: coverage.Dockerfile  run  (+3 more)
other/event_tooling/: generate_event_c.cpp
other/fun/: create_savedata.c
other/rpm/: toxcore.spec.in
testing/: BUILD.bazel  CMakeLists.txt  Messenger_test.c  irc_syncbot.c  misc_tools.c  misc_tools.h  nTox.c
testing/bench/: BUILD.bazel  tox_friends_scaling_bench.cc  tox_messenger_bench.cc
testing/fuzzing/: BUILD.bazel  bootstrap_fuzz_test.cc  bootstrap_harness.cc  e2e_fuzz_test.cc  fuzz_support.cc  fuzz_support.h  fuzz_support.hh  protodump.cc  protodump_reduce.cc  toxsave_fuzz_test.cc  toxsave_harness.cc
testing/netprof/: BUILD.bazel  CMakeLists.txt  app.cc  app.hh  app_test.cc  command_registry.cc  command_registry.hh  constants.hh  layout_engine.cc  layout_engine.hh  layout_engine_test.cc  main.cc  model.hh  model_utils.cc  model_utils.hh  model_utils_test.cc  node_wrapper.cc  node_wrapper.hh  node_wrapper_test.cc  packet_utils.cc  packet_utils.hh  simulation_manager.cc  simulation_manager.hh  simulation_manager_test.cc  ui.cc  ui.hh  ui_test.cc  ui_test_support.cc  ui_test_support.hh
testing/netprof/examples/: friends22.json
testing/netprof/views/: BUILD.bazel  bottom_bar.cc  bottom_bar.hh  command_log.cc  command_log.hh  command_log_test.cc  command_palette.cc  command_palette.hh  command_palette_test.cc  dht_filter.cc  dht_filter.hh  dht_filter_test.cc  dht_topology.cc  dht_topology.hh  dht_topology_test.cc  event_log.cc  event_log.hh  event_log_test.cc  focusable.cc  focusable.hh  hud.cc  hud.hh  hud_test.cc  inspector.cc  inspector.hh  inspector_test.cc  topology.cc  topology.hh  topology_test.cc
testing/support/: BUILD.bazel  CMakeLists.txt  bootstrap_scaling_test.cc  tox_network_test.cc
tox/: tox.h  toxav.h  toxencryptsave.h
toxav/: BUILD.bazel  Makefile.inc  audio.c  audio.h  audio_bench.cc  audio_test.cc  av_test_support.cc  av_test_support.hh  bwcontroller.c  bwcontroller.h  bwcontroller_test.cc  groupav.c  msi.c  msi.h  msi_test.cc  ring_buffer.c  ring_buffer.h  ring_buffer_test.cc  rtp.c  rtp.h  rtp_bench.cc  rtp_fuzz_test.cc  rtp_test.cc  toxav.api.h  toxav.c  toxav.h  toxav_compat.c  toxav_fuzz_seed_gen.cc  toxav_fuzz_test.cc  toxav_hacks.h  toxav_old.c  toxav_private.h  toxav_test.cc  video.c  video.h  video_bench.cc  video_test.cc
toxcore/: BUILD.bazel  DHT.c  DHT.h  DHT_bench.cc  DHT_fuzz_test.cc  DHT_test.cc  DHT_test_util.cc  DHT_test_util.hh  LAN_discovery.api.h  LAN_discovery.c  LAN_discovery.h  Makefile.inc  Messenger.c  Messenger.h  TCP_client.c  TCP_client.h  TCP_client_test.cc  TCP_common.c  TCP_common.h  TCP_connection.c  TCP_connection.h  TCP_server.c  TCP_server.h  TCP_server_test.cc  announce.c  announce.h  attributes.h  bin_pack.c  bin_pack.h  bin_pack_test.cc  bin_unpack.c  bin_unpack.h  ccompat.c  ccompat.h  clock.c  clock.h  crypto_core.api.h  crypto_core.c  crypto_core.h  crypto_core_mem.c  (+165 more)
toxcore/events/: conference_connected.c  conference_invite.c  conference_message.c  conference_peer_list_changed.c  conference_peer_name.c  conference_title.c  dht_get_nodes_response.c  dht_nodes_response.c  event_macros.h  events_alloc.c  events_alloc.h  file_chunk_request.c  file_recv.c  file_recv_chunk.c  file_recv_control.c  friend_connection_status.c  friend_lossless_packet.c  friend_lossy_packet.c  friend_message.c  friend_name.c  friend_read_receipt.c  friend_request.c  friend_status.c  friend_status_message.c  friend_typing.c  group_custom_packet.c  group_custom_private_packet.c  group_invite.c  group_join_fail.c  group_message.c  group_moderation.c  group_password.c  group_peer_exit.c  group_peer_join.c  group_peer_limit.c  group_peer_name.c  group_peer_status.c  group_privacy_state.c  group_private_message.c  group_self_join.c  (+4 more)
toxencryptsave/: Makefile.inc  toxencryptsave.c  toxencryptsave.h
(+39 files in other folders)
