load("@rules_cc//cc:defs.bzl", "cc_library")
load("//tools/project:build_defs.bzl", "project")

project(license = "gpl3-https")

filegroup(
    name = "legacy_headers",
    srcs = [
        "tox/tox.h",
        "tox/toxav.h",
        "tox/toxencryptsave.h",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "public_headers",
    srcs = [
        "//c-toxcore/toxav:toxav.h",
        "//c-toxcore/toxcore:tox.h",
        "//c-toxcore/toxcore:tox_dispatch.h",
        "//c-toxcore/toxcore:tox_events.h",
        "//c-toxcore/toxcore:tox_log_level.h",
        "//c-toxcore/toxcore:tox_options.h",
        "//c-toxcore/toxcore:tox_private.h",
        "//c-toxcore/toxencryptsave:toxencryptsave.h",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "c-toxcore",
    hdrs = [
        ":legacy_headers",
        ":public_headers",
    ],
    strip_include_prefix = ".",
    visibility = ["//visibility:public"],
    deps = [
        "//c-toxcore/toxav",
        "//c-toxcore/toxcore",
        "//c-toxcore/toxencryptsave",
    ],
)
